# Git_Gstreamer_study

./: ReadMe.html  ashu.c  git-commands_tutorial  gstreamer_tutorial  patidar.c  rachna.c  vinod.c
Gst_Exercise/: .cproject  .project  Makefile.am  gstmysink.c  gstmysink.h  gstmysrc.c  gstmysrc.h  gstmytransform.c  gstmytransform.h
